
#### v1.4.15

- Added `log.getfile()` to get the current log file path.
- Fixed match display to better accommodate escape codes for italics and underline, if present and supported by the terminal.
- Fixed [#414](https://github.com/chrisant996/clink/issues/414); argument color doesn't reset for values in multi-column layout when `colored-stats` is `off`.
- PR [#418](https://github.com/chrisant996/clink/pull/418); Fix crash caused by destruction of non detached threads.
- PR [#417](https://github.com/chrisant996/clink/pull/417); Fix buffer overread caused by usage of strcmp on non null-terminated char arrays.

#### v1.4.14

- Fixed autosuggest to update again if matches are marked as volatile and the input line changed while matches were generated in the background (related to [clink-completions#164](https://github.com/vladimir-kotikov/clink-completions/issues/164)).

#### v1.4.13

- Added more status information in `clink-diagnostics` <kbd>Ctrl</kbd>-<kbd>X</kbd>,<kbd>Ctrl</kbd>-<kbd>Z</kbd>.
- Fixed quoting in the `insert-completions` <kbd>Alt</kbd>-<kbd>*</kbd> command.
- Fixed quoting for non-filename completions.
- Fixed a CPU busy-loop after `match_builder:setvolatile()` was called during an autosuggest strategy.
- Fixed [#411](https://github.com/chrisant996/clink/issues/411); setting `%CLINK_HISTORY_LABEL%` after Clink started didn't take effect (regression introduced in v1.3.18).

#### v1.4.12

- Additional improvements and logging for East Asian ambiguous width characters.
- Running `clink inject` no longer empties the log file, so that AutoRun doesn't result in the log file being cleared over and over, which interferes with diagnostic efforts.
- Fixed [#407](https://github.com/chrisant996/clink/issues/407); the `complete` command gets confused by `.` prefix on files.

#### v1.4.11
