@@ -5,6 +5,8 @@
 #### v1.4.16
 
 - Added detection for problematic codes in the prompt string.  The `clink-diagnostics` <kbd>Ctrl</kbd>-<kbd>X</kbd>,<kbd>Ctrl</kbd>-<kbd>Z</kbd> command reports problem codes in the prompt string.  When certain problem codes exist in the prompt string, then Clink compensates by reprinting the entire input line after printing the prompt string.  Ideally, the prompt string should be fixed by the user, but sometimes that's difficult if the prompt string was generated by a tool.
+- **Potential Breaking Change:** Fixed how hidden and system files are handled by `os.globdirs()` and `os.globfiles()` (it had never worked properly).  It worked fine with the default modes of the `files.hidden` and `files.system` settings and `match-hidden-files` config variable.  But if any of those were changed from the default values then malfunctions could occur.  With the fix, in backward compatibility mode the `files.hidden` and `files.system` settings and `match-hidden-files` config variable control whether `os.globdirs()` and `os.globfiles()` find hidden or system files, as before, and things can potentially malfunction.  When the optional `extrainfo` argument is non-zero or when a new optional `flags` table is passed to them, they now default to including hidden files and omitting system files, but the `flags` table can override that.  This change was necessary because some scripts were unable to detect git repositories when the `files.hidden` setting was false.  Excluding hidden files never worked properly in the past.  Clink v1.4.16 does its best to be as backward-compatible and forward-compatible as possible, but in some cases scripts may need to be updated to work properly when the settings or config variable are changed from their default values.
+- Fixed the `match-hidden-files` config variable to work again (regression introduced in v1.0.0).  Also, now it hides files and directories whose names begin with `.`.
 
 #### v1.4.15
 
@@ -793,8 +795,8 @@
 
 - Added `clink uninstallscripts --all` to clear all script paths installed by `clink installscripts`.
 - Added `os.touch()` function to set the access and modified times for a file.
-- Added more fields in `os.globdir()` and `os.globfiles()` when `extrainfo` is requested.
-- **Potential Breaking Change:** Fixed `os.globdir()` and `os.globfiles()` to only return extra info when actually requested (regression introduced in v1.1.8).
+- Added more fields in `os.globdirs()` and `os.globfiles()` when `extrainfo` is requested.
+- **Potential Breaking Change:** Fixed `os.globdirs()` and `os.globfiles()` to only return extra info when actually requested (regression introduced in v1.1.8).
     - This unfortunately changes the scheme and may break some scripts if they requested no extra info, but used the extra info anyway.
 - Fixed crash in `clink-select-complete` when a match display filter returns nil.
 - Fixed `ondisplaymatches()` which was receiving one fewer matches than it should (related to [#124](https://github.com/chrisant996/clink/issues/124)).
